# raspberry-pi-snakes

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  clear.py  deploy.sh  gemini.py  install.sh  led_map.py  led_map_test.py  main.py  pyproject.toml  requirements.txt  setup.py  step_effect.py  test_install.sh  test_led.py
service/: snake_dance.ini  snake_dance.service
snake/: agent.py  const.py  led_map.py  led_map_test.py  led_map_v2.py  led_map_v2_test.py  main.py  snake_game.py  types.py
snake/ml_agent/: agent.py  policy.checkpoint  training.ipynb
tests/: test_main.py
